# ore

./: Cargo.toml  EVscript.txt
bot/: Cargo.toml  TIMING_OPTIMIZATION.md
bot/examples/: analyze_history.rs
bot/src/: main.rs
cli/src/: details.md
